Copy list of companies from reference.kemitchell.com

--- a/index.html
+++ b/index.html
@@ -26,6 +26,51 @@
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
+      <ul>
+        <li>Active Endpoints, Inc. (ActiveBPEL)</li>
+        <li>Artifex (Ghostscript)</li>
+        <li>Compiere (ERP)</li>
+        <li>db4o</li>
+        <li>Digium (Asterisk)</li>
+        <li>
+          <a href="https://drone.io/">drone.io</a>
+        </li>
+        <li>
+          <a href="https://www.ettus.com/">Ettus Research</a>
+        </li>
+        <li>Funambol</li>
+        <li>HWACI (SQLite)</li>
+        <li>
+          <a href="https://itextpdf.com/">iText</a>
+        </li>
+        <li>Jaspersoft</li>
+        <li>
+          <a href="http://mergely.com/license">Mergely</a>
+        </li>
+        <li>
+          <a href="https://metafizzy.co/">Metafizzy</a> (<a href="https://isotope.metafizzy.co/license.html">Isotope</a>) (<a href="https://flickity.metafizzy.co/license.html">Flickity</a>)
+        </li>
+        <li>MongoDB</li>
+        <li>MySQL AB (now Oracle) (MySQL)</li>
+        <li>Odoo</li>
+        <li>OPC Foundation (UA)</li>
+        <li>
+          <a href="https://particular.net/">Particular Software</a> (<a href="https://particular.net/nservicebus">NServiceBus</a>)
+        </li>
+        <li>
+          <a href="https://ayende.com/blog/186147-A/making-money-from-open-source-software-how-we-do-it">RavenDB</a>
+        </li>
+        <li>ScientiaMobile (WURFL)</li>
+        <li>Sendmail, Inc.</li>
+        <li>Sleepycat (now Oracle) (Berkeley DB)</li>
+        <li>SugarCRM (Sugar)</li>
+        <li>
+          <a href="https://technicalpursuit.com/">Technical Pursuit</a> (<a href="https://technicalpursuit.com/license.xhtml">TIBET</a>)
+        </li>
+        <li>
+          <a href="https://www.qt.io/company">The Qt Company</a> (formerly TrollTech AS) (<a href="https://www1.qt.io/licensing/">Qt</a>)
+        </li>
+      </ul>
     </section>
   </main>
   <footer role="contentinfo"></footer>
