Add single-sentence definition

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <main role="main">
     <section id="what">
       <h2>What is dual licensing?</h2>
+      <p>Dual licensing, also called “selling exceptions” and “public-private licensing”, is the business model of giving away software under one set of rules for free, and selling licenses with different rules for money.</p>
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
