--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <section id="who">
       <h2>Who is dual licensing?</h2>
       <ul>
+        <li>
+          <a href="https://www.activestate.com/solutions/licensing/">ActiveState</a>
+        </li>
         <li>Active Endpoints, Inc. (ActiveBPEL)</li>
         <li>Artifex (Ghostscript)</li>
         <li>Compiere (ERP)</li>
