Link to Artifex

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           <a href="https://www.activestate.com/solutions/licensing/">ActiveState</a>
         </li>
         <li>Active Endpoints, Inc. (ActiveBPEL)</li>
-        <li>Artifex (Ghostscript)</li>
+        <li>
+          <a href="https://artifex.com/licensing/">Artifex</a> (Ghostscript)
+        </li>
         <li>Compiere (ERP)</li>
         <li>db4o</li>
         <li>Digium (Asterisk)</li>
