--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>duallicensing.com</title>
   <link href="https://readable.kemitchell.com/all.css" rel="stylesheet">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="duallicensing.com">
+  <meta name="twitter:description" content="the dual licensing business model">
+  <meta name="twitter:creator" content="@licensezero">
+  <meta name="og:type" content="website">
+  <meta name="og:title" content="duallicensing.com">
+  <meta name="og:description" content="the dual licensing business model">
 </head>
 <body>
   <header role="banner">
