Add "How can I add my company to this page?"

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <li>
         <a href="#who">Who is dual licensing?</a>
       </li>
+      <li>
+        <a href="#add">How can I add my company to this page?</a>
+      </li>
     </ol>
   </nav>
   <main role="main">
@@ -84,6 +87,10 @@
           <a href="https://www.qt.io/company">The Qt Company</a> (formerly TrollTech AS) (<a href="https://www1.qt.io/licensing/">Qt</a>)
         </li>
       </ul>
+    </section>
+    <section id="add">
+      <h2>How can I add my company to this page?</h2>
+      <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/blob/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
     </section>
   </main>
   <footer role="contentinfo"></footer>
