--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
       <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/blob/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
     </section>
   </main>
-  <footer role="contentinfo"></footer>
+  <footer role="contentinfo">
+    <p>duallicensing.com is a project of <a href="https://licensezero.com">License Zero</a>.</p>
+  </footer>
 </body>
 </html>
