Replace GitHub link with a direct file-edit link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
     <section id="add">
       <h2>How can I add my company to this page?</h2>
-      <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/blob/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
+      <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/edit/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
     </section>
   </main>
   <footer role="contentinfo">
