Add "Where can I learn more?"

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <li>
         <a href="#add">How can I add my company to this page?</a>
       </li>
+      <li>
+        <a href="#learn">Where can I learn more?</a>
+      </li>
     </ol>
   </nav>
   <main role="main">
@@ -91,6 +94,17 @@
     <section id="add">
       <h2>How can I add my company to this page?</h2>
       <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/edit/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
+    </section>
+    <section id="learn">
+      <h2>Where can I learn more?</h2>
+      <ul>
+        <li>
+          <a href="https://indieopensource.com/public-private/indies">indieopensource.com’s Public-Private Licensing for Indies</a>
+        </li>
+        <li>
+          <a href="https://www.gnu.org/philosophy/pragmatic.html">Richard Stallman’s Copyleft: Pragmatic Idealism</a>
+        </li>
+      </ul>
     </section>
   </main>
   <footer role="contentinfo">
