--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         <li>
           <a href="https://www.qt.io/company">The Qt Company</a> (formerly TrollTech AS) (<a href="https://www1.qt.io/licensing/">Qt</a>)
         </li>
+        <li>
+          <a href="http://zenoss.com/">ZenOSS</a>
+        </li>
       </ul>
     </section>
     <section id="add">
