--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
         <li>
           <a href="http://zenoss.com/">ZenOSS</a>
         </li>
+        <li>
+          <a href="https://zeroc.com/">ZeroC</a> (<a href="https://zeroc.com/licensing">Ice</a>)
+        </li>
       </ul>
     </section>
     <section id="add">
