Add Magnolia CMS

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         </li>
         <li>Jaspersoft</li>
         <li>
+          <a href="https://www.magnolia-cms.com/">Magnolia CMS</a>
+        </li>
+        <li>
           <a href="http://mergely.com/license">Mergely</a>
         </li>
         <li>
