Add Mosaic and Netscape Navigator as historic examples

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <a href="#add">How can I add my company to this page?</a>
       </li>
       <li>
+        <a href="#historic">Any historic examples?</a>
+      </li>
+      <li>
         <a href="#learn">Where can I learn more?</a>
       </li>
     </ol>
@@ -103,6 +106,13 @@
     <section id="add">
       <h2>How can I add my company to this page?</h2>
       <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/edit/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
+    </section>
+    <section id="historic">
+      <h2>Any historic examples?</h2>
+      <ul>
+        <li>NCSA Mosaic</li>
+        <li>Netscape Navigator</li>
+      </ul>
     </section>
     <section id="learn">
       <h2>Where can I learn more?</h2>
