Link to Wikipedia for Mosaic and Navigator

--- a/index.html
+++ b/index.html
@@ -110,8 +110,12 @@
     <section id="historic">
       <h2>Any historic examples?</h2>
       <ul>
-        <li>NCSA Mosaic</li>
-        <li>Netscape Navigator</li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Mosaic_(web_browser)">NCSA Mosaic</a>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Netscape_Navigator">Netscape Navigator</a>
+        </li>
       </ul>
     </section>
     <section id="learn">
