Link to "How to Buy" page for iText

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li>Funambol</li>
         <li>HWACI (SQLite)</li>
         <li>
-          <a href="https://itextpdf.com/">iText</a>
+          <a href="https://itextpdf.com/en/how-buy">iText</a>
         </li>
         <li>Jaspersoft</li>
         <li>
