--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
           <a href="https://www.qt.io/company">The Qt Company</a> (formerly TrollTech AS) (<a href="https://www1.qt.io/licensing/">Qt</a>)
         </li>
         <li>
+          <a href="https://www.videolan.org/developers/x264.html">VideoLAN (x264)</a>
+        </li>
+        <li>
           <a href="http://zenoss.com/">ZenOSS</a>
         </li>
         <li>
