--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <li>
           <a href="https://metafizzy.co/">Metafizzy</a> (<a href="https://isotope.metafizzy.co/license.html">Isotope</a>) (<a href="https://flickity.metafizzy.co/license.html">Flickity</a>)
         </li>
+        <li>
+          <a href="http://fftw.org/">FFTW</a> (MIT)
+        </li>
         <li>MongoDB</li>
         <li>MySQL AB (now Oracle) (MySQL)</li>
         <li>Odoo</li>
