--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         </li>
         <li>Jaspersoft</li>
         <li>
+          <a href="https://www.cl.cam.ac.uk/~mgk25/jbigkit/">JBIG-KIT</a>
+        </li>
+        <li>
           <a href="https://www.magnolia-cms.com/">Magnolia CMS</a>
         </li>
         <li>
