--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <a href="https://www.ettus.com/">Ettus Research</a>
         </li>
         <li>Funambol</li>
+        <li>
+          <a href="https://handsontable.com/pricing">Handsontable</a>
+        </li>
         <li>HWACI (SQLite)</li>
         <li>
           <a href="https://itextpdf.com/en/how-buy">iText</a>
