--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>duallicensing.com</title>
-  <link href="https://readable.kemitchell.com/all.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="duallicensing.com">
   <meta name="twitter:description" content="the dual licensing business model">
@@ -43,7 +43,7 @@
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
-      <ul>
+      <ul class="twocolumn">
         <li>
           <a href="https://www.activestate.com/solutions/licensing/">ActiveState</a>
         </li>
