Move call for more projects into Who? section

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
         <a href="#who">Who is dual licensing?</a>
       </li>
       <li>
-        <a href="#add">How can I add my company to this page?</a>
-      </li>
-      <li>
         <a href="#historic">Any historic examples?</a>
       </li>
       <li>
@@ -114,10 +111,7 @@
           <a href="https://zeroc.com/">ZeroC</a> (<a href="https://zeroc.com/licensing">Ice</a>)
         </li>
       </ul>
-    </section>
-    <section id="add">
-      <h2>How can I add my company to this page?</h2>
-      <p>Send a pull request <a href="https://github.com/licensezero/duallicensing.com/edit/master/index.html">editing <code>index.html</code></a> on GitHub.</p>
+      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/master/index.html">Send a pull request</a> or <a href="mailto:kyle@artlessdevices.com">send an e-mail</a>!</p>
     </section>
     <section id="historic">
       <h2>Any historic examples?</h2>
