Remove fixed font-size and add content block padding

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
   <main role="main">
     <section id="what">
       <h2>What is dual licensing?</h2>
-      <p>Dual licensing, also called “selling exceptions” and “public-private licensing”, is the business model of giving away software under one set of rules for free, and selling licenses with different rules for money.</p>
+      <p>Dual licensing is the business model of giving software away under one set of terms for free, then charing to do what the free terms don’t allow.</p>
+      <p>For example, a project might allow noncommercial use for free and charge for commercial use. Or it may allow use in open source projects for free, but charge for use in closed projects.</p>
+      <p>Dual licensing is sometimes called “selling exceptions” and “public-private licensing”.</p>
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
