Update list with more links

--- a/index.html
+++ b/index.html
@@ -46,28 +46,39 @@
         <li>
           <a href="https://www.activestate.com/solutions/licensing/">ActiveState</a>
         </li>
-        <li>Active Endpoints, Inc. (ActiveBPEL)</li>
+        <li>
+          <a href="https://www.activeendpoints.com/">Active Endpoints, Inc.</a> (ActiveBPEL)
+        </li>
         <li>
           <a href="https://artifex.com/licensing/">Artifex</a> (Ghostscript)
         </li>
-        <li>Compiere (ERP)</li>
-        <li>db4o</li>
-        <li>Digium (Asterisk)</li>
+        <li>
+          <a href="http://www.compiere.com/">Compiere</a> (ERP)
+        </li>
+        <li>
+          <a href="https://www.sangoma.com/">Sangoma</a> Asterisk)
+        </li>
         <li>
           <a href="https://drone.io/">drone.io</a>
         </li>
         <li>
           <a href="https://www.ettus.com/">Ettus Research</a>
         </li>
-        <li>Funambol</li>
+        <li>
+          <a href="https://funambol.com/">Funambol</a>
+        </li>
         <li>
           <a href="https://handsontable.com/pricing">Handsontable</a>
         </li>
-        <li>HWACI (SQLite)</li>
+        <li>
+          <a href="https://sqlite.org/">SQLite</a>
+        </li>
         <li>
           <a href="https://itextpdf.com/en/how-buy">iText</a>
         </li>
-        <li>Jaspersoft</li>
+        <li>
+          <a href="https://www.jaspersoft.com/">Jaspersoft</a>
+        </li>
         <li>
           <a href="https://www.cl.cam.ac.uk/~mgk25/jbigkit/">JBIG-KIT</a>
         </li>
@@ -83,20 +94,34 @@
         <li>
           <a href="http://fftw.org/">FFTW</a> (MIT)
         </li>
-        <li>MongoDB</li>
-        <li>MySQL AB (now Oracle) (MySQL)</li>
-        <li>Odoo</li>
-        <li>OPC Foundation (UA)</li>
+        <li>
+          <a href="https://mongodb.com">MongoDB</a>
+        </li>
+        <li>
+          <a href="https://mysql.com">MySQL</a>
+        </li>
+        <li>
+          <a href="https://odoo.com">Odoo</a>
+        </li>
+        <li>
+          <a href="https://opcfoundation.org">OPC Foundation</a> (UA)
+        </li>
         <li>
           <a href="https://particular.net/">Particular Software</a> (<a href="https://particular.net/nservicebus">NServiceBus</a>)
         </li>
         <li>
           <a href="https://ayende.com/blog/186147-A/making-money-from-open-source-software-how-we-do-it">RavenDB</a>
         </li>
-        <li>ScientiaMobile (WURFL)</li>
-        <li>Sendmail, Inc.</li>
+        <li>
+          <a href="https://scientiamobile.com">ScientiaMobile</a> (WURFL)
+        </li>
+        <li>
+          <a href="http://www.sendmail.com/">Sendmail, Inc.</a>
+        </li>
         <li>Sleepycat (now Oracle) (Berkeley DB)</li>
-        <li>SugarCRM (Sugar)</li>
+        <li>
+          <a href="https://sugarcrm.com">SugarCRM</a> (Sugar)
+        </li>
         <li>
           <a href="https://technicalpursuit.com/">Technical Pursuit</a> (<a href="https://technicalpursuit.com/license.xhtml">TIBET</a>)
         </li>
