--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <a href="https://drone.io/">drone.io</a>
         </li>
         <li>
+          <a href="https://www.epplussoftware.com/">EPPlus</a>
+        </li>
+        <li>
           <a href="https://www.ettus.com/">Ettus Research</a>
         </li>
         <li>
