--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
           <a href="https://www.qt.io/company">The Qt Company</a> (formerly TrollTech AS) (<a href="https://www1.qt.io/licensing/">Qt</a>)
         </li>
         <li>
+          <a href="https://vcvrack.com">VCV Rack</a>
+        </li>
+        <li>
           <a href="https://www.videolan.org/developers/x264.html">VideoLAN (x264)</a>
         </li>
         <li>
