Add Kornel's projects

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <a href="https://drone.io/">drone.io</a>
         </li>
         <li>
+          <a href="https://github.com/kornelski/dssim">DSSIM</a>
+        </li>
+        <li>
           <a href="https://www.epplussoftware.com/">EPPlus</a>
         </li>
         <li>
@@ -69,6 +72,9 @@
         </li>
         <li>
           <a href="https://funambol.com/">Funambol</a>
+        </li>
+        <li>
+          <a href="https://gif.ski/">Gifski</a>
         </li>
         <li>
           <a href="https://handsontable.com/pricing">Handsontable</a>
@@ -111,6 +117,9 @@
         </li>
         <li>
           <a href="https://particular.net/">Particular Software</a> (<a href="https://particular.net/nservicebus">NServiceBus</a>)
+        </li>
+        <li>
+          <a href="https://pngquant.org/">pngquant</a>
         </li>
         <li>
           <a href="https://ayende.com/blog/186147-A/making-money-from-open-source-software-how-we-do-it">RavenDB</a>
