Add Nmap Security Scanner

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
           <a href="https://metafizzy.co/">Metafizzy</a> (<a href="https://isotope.metafizzy.co/license.html">Isotope</a>) (<a href="https://flickity.metafizzy.co/license.html">Flickity</a>)
         </li>
         <li>
+          <a href="https://nmap.org/oem/">Nmap Security Scanner</a>
+        </li>
+        <li>
           <a href="http://fftw.org/">FFTW</a> (MIT)
         </li>
         <li>
