--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
           <a href="https://funambol.com/">Funambol</a>
         </li>
         <li>
+          <a href="https://www.geogebra.org/license">GeoGebra</a>
+        </li>
+        <li>
           <a href="https://gif.ski/">Gifski</a>
         </li>
         <li>
