Move historic examples into data file

--- a/index.template.html
+++ b/index.template.html
@@ -61,12 +61,11 @@
     <section id="historic">
       <h2>Any historic examples?</h2>
       <ul>
+        {{#historic}}
         <li>
-          <a href="https://en.wikipedia.org/wiki/Mosaic_(web_browser)">NCSA Mosaic</a>
+          <a href="{{url}}">{{name}}</a>
         </li>
-        <li>
-          <a href="https://en.wikipedia.org/wiki/Netscape_Navigator">Netscape Navigator</a>
-        </li>
+        {{/historic}}
       </ul>
     </section>
     <section id="learn">
