--- a/index.template.html
+++ b/index.template.html
@@ -36,9 +36,9 @@
   <main role="main">
     <section id="what">
       <h2>What is dual licensing?</h2>
-      <p>Dual licensing is the business model of giving software away under one set of terms for free and charging to do what the free terms don’t allow.</p>
+      <p>Dual licensing is a business model. Give everyone free permission to use your software in some ways, and sell permission to use the software in other ways.</p>
       <p>For example, a developer might allow noncommercial use of their software for free and charge for commercial use, or allow use in open source projects for free and charge for use in closed.</p>
-      <p>Dual licensing is sometimes called “selling exceptions” and “public-private licensing”. This helps to avoid confusion with other licensing choices that are also called “dual licensing”.</p>
+      <p>Dual licensing is sometimes called “selling exceptions”.</p>
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
