Link to main branch

--- a/index.template.html
+++ b/index.template.html
@@ -42,7 +42,7 @@
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
-      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/master/index.html">Send a pull request</a> or <a href="mailto:kyle@artlessdevices.com">send an e-mail</a>!</p>
+      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/main/index.html">Send a pull request</a> or <a href="mailto:kyle@artlessdevices.com">send an e-mail</a>!</p>
       <ul class="twocolumn">
         {{#licensors}}
         <li>
