Replace License Zero with Artless Devices in footer

--- a/index.template.html
+++ b/index.template.html
@@ -81,7 +81,7 @@
     </section>
   </main>
   <footer role="contentinfo">
-    <p>duallicensing.com is a project of <a href="https://licensezero.com">License Zero</a>.</p>
+    <p>duallicensing.com is a project of <a href="https://artlessdevices.com">Artless Devices</a>.</p>
   </footer>
 </body>
 </html>
