Remove redundant role attributes

--- a/index.template.html
+++ b/index.template.html
@@ -14,10 +14,10 @@
   <meta name="og:description" content="the dual licensing business model">
 </head>
 <body>
-  <header role="banner">
+  <header>
     <h1>duallicensing.com</h1>
   </header>
-  <nav role="navigation">
+  <nav>
     <ol>
       <li>
         <a href="#what">What is dual licensing?</a>
@@ -33,7 +33,7 @@
       </li>
     </ol>
   </nav>
-  <main role="main">
+  <main>
     <section id="what">
       <h2>What is dual licensing?</h2>
       <p>Dual licensing is a business model. Give everyone free permission to use your software in some ways, and sell permission to use the software in other ways.</p>
@@ -80,7 +80,7 @@
       </ul>
     </section>
   </main>
-  <footer role="contentinfo">
+  <footer>
     <p>duallicensing.com is a project of <a href="https://artlessdevices.com">Artless Devices</a>.</p>
   </footer>
 </body>
