Add meta description

--- a/index.template.html
+++ b/index.template.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>duallicensing.com</title>
   <link href="styles.css" rel="stylesheet">
+  <meta name="description" content="the dual licensing business model">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="duallicensing.com">
   <meta name="twitter:description" content="the dual licensing business model">
