--- a/index.template.html
+++ b/index.template.html
@@ -36,9 +36,9 @@
   <main>
     <section id="what">
       <h2>What is dual licensing?</h2>
-      <p>Dual licensing is a business model. Give everyone free permission to use your software in some ways, and sell permission to use the software in other ways.</p>
-      <p>For example, a developer might allow noncommercial use of their software for free and charge for commercial use, or allow use in open source projects for free and charge for use in closed.</p>
-      <p>Dual licensing is sometimes called “selling exceptions”.</p>
+      <p>Dual licensing is a business model. Give everyone free permission to use your software in some ways, then sell permission to use the software in the other ways.</p>
+      <p>For example, you might allow noncommercial use of your software for free, then charge for commercial use, or allow use in free or open projects for free and charge for use in closed and proprietary projects.</p>
+      <p>Dual licensing is sometimes called “selling exceptions”. The license terms for free use are “the rule”. The permissions you sell to break that general rule are the “exceptions”.</p>
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
