--- a/index.template.html
+++ b/index.template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>duallicensing.com</title>
+  <title>Dual Licensing</title>
   <link href="styles.css" rel="stylesheet">
   <meta name="description" content="the dual licensing business model">
   <meta name="twitter:card" content="summary">
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1>duallicensing.com</h1>
+    <h1>Dual Licensing</h1>
   </header>
   <nav>
     <ol>
