--- a/index.template.html
+++ b/index.template.html
@@ -36,7 +36,7 @@
   <main>
     <section id="what">
       <h2>What is dual licensing?</h2>
-      <p>Dual licensing is a business model for creative work covered by <a href="https://en.wikipedia.org/wiki/Copyright">copyright</a>. In software, dual licensing means giving everyone free permission to use the software in some ways while selling permission to use it in others. For example, a developer might allow noncommercial use of their software for free while charging for commercial-use licenses.  Or they may allow use of their work in free, open projects while charing for use in closed, proprietary projects.</p>
+      <p>Dual licensing is a business model for creative work covered by <a href="https://en.wikipedia.org/wiki/Copyright">copyright</a>. In software, dual licensing means giving everyone free permission to use the software in some ways while selling permission to use it in others. For example, a developer might allow noncommercial use of their software for free while charging for commercial-use licenses.  Or they may allow use of their work in free, open projects while charing for use in closed, proprietary ones.</p>
       <p>Dual licensing is sometimes called <a href="https://www.fsf.org/blogs/rms/selling-exceptions">“selling exceptions”</a>. The license terms for free use are “the rule”. Paid permissions to break that rule rule are the “exceptions”.</p>
     </section>
     <section id="who">
