Move PR link to bottom of list and update to data.yml

--- a/index.template.html
+++ b/index.template.html
@@ -41,7 +41,6 @@
     </section>
     <section id="who">
       <h2>Who is dual licensing?</h2>
-      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/main/data.json">Send a pull request</a> or <a href="mailto:kyle@artlessdevices.com">send an e-mail</a>!</p>
       <ul>
         {{#licensors}}
         <li>
@@ -56,6 +55,7 @@
         </li>
         {{/licensors}}
       </ul>
+      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/main/data.yml">Send a pull request</a>!</p>
     </section>
     <section id="historic">
       <h2>Any historic examples?</h2>
