--- a/index.template.html
+++ b/index.template.html
@@ -29,7 +29,7 @@
       <ul>
         {{#licensors}}
         <li>
-          <a href="{{url}}">{{company}}</a>
+          <a href="{{url}}">{{organization}}</a>
           {{#formerly}}
           (formerly {{.}})
           {{/formerly}}
