--- a/index.template.html
+++ b/index.template.html
@@ -34,7 +34,7 @@
           (formerly {{.}})
           {{/formerly}}
           {{#products}}
-            {{#page}}(<a href="{{page}}">{{product}}</a>){{/page}}
+            {{#page}}(<a href="{{page}}">{{name}}</a>){{/page}}
             {{^page}}({{product}}){{/page}}
           {{/products}}
         </li>
