Fix template directive

--- a/index.template.html
+++ b/index.template.html
@@ -35,7 +35,7 @@
           {{/formerly}}
           {{#products}}
             {{#page}}(<a href="{{page}}">{{name}}</a>){{/page}}
-            {{^page}}({{product}}){{/page}}
+            {{^page}}({{name}}){{/page}}
           {{/products}}
         </li>
         {{/licensors}}
