Put exclamation mark within link

--- a/index.template.html
+++ b/index.template.html
@@ -37,7 +37,7 @@
         </li>
         <% } %>
       </ul>
-      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/main/data.yml">Send a pull request</a>!</p>
+      <p>Missing someone? <a href="https://github.com/licensezero/duallicensing.com/edit/main/data.yml">Send a pull request!</a></p>
     </section>
     <section id="historic">
       <h2>Any historic examples?</h2>
