--- a/index.template.html
+++ b/index.template.html
@@ -31,8 +31,7 @@
         <li>
           <a href="<%= licensor.url %>"><%= licensor.name %></a><% if (licensor.formerly) { %> (formerly <%= licensor.formerly %>)<% } %><% if (licensor.products) { %>:
             <% for (const [index, product] of licensor.products.entries()) { %>
-              <% if (product.url) { %><a href="<%= product.url %>"><%= product.name %></a><% } else { %><%= product.name %><% } %><% if (index < (licensor.products.length -1 )) { %>, <% } %>
-              <% if (product.announcement) { %> (<a href="<%= product.announcement %>">announcement</a>)<% } %>
+              <% if (product.url) { %><a href="<%= product.url %>"><%= product.name %></a><% } else { %><%= product.name %><% } %><% if (index < (licensor.products.length -1 )) { %><% } %><% if (product.announcement) { %> (<a href="<%= product.announcement %>">announcement</a>)<% } %>, 
             <% } %>
           <% } %>
         </li>
